--- a/ddPCR_rTemplate_report.Rmd
+++ b/ddPCR_rTemplate_report.Rmd
@@ -50,7 +50,7 @@ header-includes:
 \fancypagestyle{plain}{%
   \renewcommand{\headrulewidth}{0pt}%
   \fancyhf{}%
-  \fancyfoot[C]{\footnotesize Page \thepage\, of\, \pageref*{LastPage} `r params$sid` `r params$mid` Generated at `r params$date` by ddPCR MRD Pipeline Version 3.0, 5 Sep 2024}
+  \fancyfoot[C]{\footnotesize Page \thepage\, of\, \pageref*{LastPage} `r params$sid` `r params$mid` Generated at `r params$date` by ddPCR MRD Pipeline (for cfDNA only) Version 1.0, 12 Sep 2024}
   \setlength\footskip{0pt}
 }
 \pagestyle{plain}
